# Topics_in_geometry_and_medical_visualization

./: .gitattributes  .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  environment.yml  jupytext.toml  migration_log.tsv  pyproject.toml  requirements-dev.txt  requirements-medvis.txt  requirements.txt  setup.sh
assignment_1/: main.py
assignment_2/: README.md  __init__.py  apply_optimized_points.py  interactive_spline.py  main.py  optimize_spline.py
assignment_3/: INFORME.md  README.md  REPORT.md  __init__.py  compare_bsplines.py  main.py  simple_curve.py  visualize_3d.py
assignment_4/: README.md  run_detection.py  run_visualization.py
examples/: compare.py  fitting.py  geometry.py  interactive_spline.py  plotting.py  run_detection.py  spline.py  visualize_3d.py
notebooks/: 00_quickstart_medvis.ipynb
presentation/: Medvis - Presentación.aux  Medvis - Presentación.fdb_latexmk  Medvis - Presentación.fls  Medvis - Presentación.nav  Medvis - Presentación.out  Medvis - Presentación.tex  Medvis - Presentación.toc
scripts/: bezier_arc_chord_report.py  bezier_bspline_interpolation_report.py  bezier_interpolation_analysis.py  bezier_interpolation_curves_report.py  bezier_skull_approximation_report.py  bezier_skull_interpolation_report.py  bspline_protuberance_analysis_report.py  bspline_skull_complete_contour_slice4.py  bspline_skull_interpolation_report.py  bspline_skull_sides_connection_report.py  bspline_skull_slices_batch_report.py  check_orientation_mapping.py  generate_synthetic_contours_report.py  skull_lemniscate_interpolation.py  (+5 more)
(+295 files in other folders)
